# synth_launcher

./: .gitignore  .project  Cargo.toml
cs_gui/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  NativeMethods.cs  Program.cs  Progress Dialog.axaml  Progress Dialog.axaml.cs  UserCodeWindow.axaml  UserCodeWindow.axaml.cs  app.manifest  cs_gui.csproj
cs_gui/bindgen/: Cargo.toml  NativeMethods.cs  NativeMethods.cs.unused
cs_gui/bindgen/src/: cs_tokens.rs  lib.rs
cs_gui/csbindings/: Cargo.toml  build.rs
cs_gui/csbindings/src/: lib.rs  tasks.rs
cs_gui/csbindings/src/internal/: error.rs  instances.rs  mod.rs  state.rs  tasks.rs
cs_gui/csmacros/: Cargo.toml
cs_gui/csmacros/src/: lib.rs
egui_fe/: Cargo.toml
egui_fe/async_bridge/: Cargo.toml
egui_fe/async_bridge/src/: lib.rs
egui_fe/src/: VersionPrinter.java  instances.rs  main.rs  worker_logic.rs  wrappers.rs
fabric_installer_rs/: Cargo.toml
fabric_installer_rs/src/: lib.rs  types.rs
gtk_fe/: Cargo.toml
gtk_fe/src/: main.rs
launcher_core/: .project  Cargo.toml
launcher_core/src/: lib.rs  types.rs
launcher_core/src/account/: auth.rs  mod.rs  types.rs
