[workspace]
members = [
    "launcher_core",
    "egui_fe",
    "egui_fe/async_bridge"
]
resolver = "2"

[workspace.dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
sha1_smol = "1.0.0"
serde_json = { version = "1.0" }
tokio = { version = "1.33", features = ["rt-multi-thread"], default-features = false }
async-channel = "2.0.0"
eframe = "0.23.0"
launcher_core = { path = "./launcher_core" }
async_bridge = { path = "./egui_fe/async_bridge" }
