[package]
name = "egui_fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
eframe.workspace = true
launcher_core.workspace = true
async_bridge.workspace = true
tokio.workspace = true
reqwest.workspace = true
