[package]
name = "egui_fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.14"
eframe.workspace = true
launcher_core.workspace = true
async_bridge.workspace = true
async-channel.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
egui_extras = "0.26.0"
platform-dirs = "0.3.0"
toml = "0.8"
keyring = "2.1.0"
