[package]
name = "launcher_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["fs"]}
futures.workspace = true
sha1_smol.workspace = true
serde_json.workspace = true
time = { version = "0.3.30", features = ["parsing", "macros"] }
async_zip = { version = "0.0.15", features = ["full"] }
tokio-util = "0.7.10"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
