[package]
name = "csbindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
launcher_core.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
serde_json.workspace = true
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csbindgen = "1.9.0"