[package]
name = "async_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
async-channel.workspace = true
eframe.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { version = "*", features = ["full"] }